WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92202
RenderBlock::positionForPoint can fail when the block or its children have a vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=92202
Summary
RenderBlock::positionForPoint can fail when the block or its children have a ...
mitz
Reported
2012-07-24 20:53:06 PDT
RenderBlock::positionForPoint can fail when the block or its children have a vertical writing mode
Attachments
Use logical coordinates consistently and correctly
(5.08 KB, patch)
2012-07-24 20:59 PDT
,
mitz
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-07-24 20:59:57 PDT
Created
attachment 154238
[details]
Use logical coordinates consistently and correctly
Beth Dakin
Comment 2
2012-07-24 21:10:12 PDT
Comment on
attachment 154238
[details]
Use logical coordinates consistently and correctly View in context:
https://bugs.webkit.org/attachment.cgi?id=154238&action=review
> Source/WebCore/ChangeLog:12 > + one of the sub-tests in the new regression test: (1) changed to compare childrenâs logical
Funny apostrophe character on children's?
> Source/WebCore/ChangeLog:13 > + bounds against pointInLogicalContents, i.e. compare childernâs horizontal bounds to the
Here too.
> Source/WebCore/ChangeLog:14 > + pointâs horizontal component; and (2) changed to use logicalTopForChild and
Here too.
> Source/WebCore/ChangeLog:15 > + logicalHeightForChild, which account for this blockâs writing mode, instead of logicalTop
And here.
> Source/WebCore/ChangeLog:16 > + and logicalBottom, which are based on the childâs writing mode.
And here. :-P
mitz
Comment 3
2012-07-24 21:15:33 PDT
(In reply to
comment #2
)
> (From update of
attachment 154238
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=154238&action=review
> > > Source/WebCore/ChangeLog:12 > > + one of the sub-tests in the new regression test: (1) changed to compare childrenâs logical > > Funny apostrophe character on children's?
I blame
bug 75394
:(
mitz
Comment 4
2012-07-24 21:43:14 PDT
Fixed in <
http://trac.webkit.org/r123571
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug