RenderBlock::positionForPoint can fail when the block or its children have a vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=92202

Reviewed by Beth Dakin.

Source/WebCore:

Test: fast/writing-mode/positionForPoint.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::positionForPoint): Fixed two issues, each of which are covered by
one of the sub-tests in the new regression test: (1) changed to compare children’s logical
bounds against pointInLogicalContents, i.e. compare childern’s horizontal bounds to the
point’s horizontal component; and (2) changed to use logicalTopForChild and
logicalHeightForChild, which account for this block’s writing mode, instead of logicalTop
and logicalBottom, which are based on the child’s writing mode.

LayoutTests:

* fast/writing-mode/positionForPoint-expected.txt: Added.
* fast/writing-mode/positionForPoint.html: Added.



Canonical link: https://commits.webkit.org/110011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123571 268f45cc-cd09-0410-ab3c-d52691b4dbfc